[package]
name = "project_analyser"
version = "0.1.0"
authors = ["Joshua <jungen@student.chalmers.se>", "Peter <peterpi@student.chalmers.se>"]

[dependencies]
log = "0.4"
fern = "0.5.2"
chrono = "0.4.0"
preferences = "1.1.0"
lazy_static = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"

[[bin]]
name = "utils"
path = "src/bin/utils.rs"